Use a type for task status instead of passing values from the backend
